commiting to s3 bucket

--- a/posts/main/guides/contributing.mdx
+++ b/posts/main/guides/contributing.mdx
@@ -40,7 +40,7 @@ If you find a typo, error, or something that needs to be updated in the document
 
 ## Branches
 
-This section is imperative when dealing with the `monorepo` repository. Quite a workflow has been setup to automate the development and release process (thanks [Sarabadu](https://github.com/Sarabadu) and [Luciano](https://github.com/lfantone) 💖), and due to that. Random PRs can't be popping off to any branch.
+This section is imperative when dealing with the `monorepo` repository. Quite a workflow has been setup to automate the development and release process (thanks [Sarabadu](https://github.com/Sarabadu) and [Luciano](https://github.com/lfantone) 💖), and due to that, random PRs can't be popping off to any branch.
 
 There are two main branches in the `monorepo` repository at any given momoent:
 
