--- a/posts/main/utils/vite-config.mdx
+++ b/posts/main/utils/vite-config.mdx
@@ -70,8 +70,7 @@ The `ignoredSWRouteFiles` now understands string globs/patterns. For example, to
   '*/admin', // ignore all routes ending with admin
   '**/admin/**', // ignore all routes containing admin within (not at the start or end)
   '*', // ignore all routes 
-  'admin/dashboard/**', // can also ignore based on two or more patterns
-  ''
+  'admin/dashboard/**' // can also ignore based on two or more route segments
 ]
 ```
 
