--- a/posts/main/apis/default-fetch-handler.mdx
+++ b/posts/main/apis/default-fetch-handler.mdx
@@ -54,7 +54,7 @@ server that maps the same path as the request.
 </Warn>
 
 <Details title="What happens if I don't provide a default fetch handler?">
-  Well, in that case, it depends on the runtime. If you are using `@remix-pwa/worker-runtime`, the underlying behaviour is to just utilise a simple
+  Well, in that case, it depends on the [runtime](/docs/main/runtimes). If you are using `@remix-pwa/worker-runtime`, the underlying behaviour is to just utilise a simple
   `fetch` call to the server. As you can see, this behaviour is heavily dependent on the runtime, so you can customise it to suit your needs.
 </Details>
 
