--- a/posts/main/guides/gotchas.mdx
+++ b/posts/main/guides/gotchas.mdx
@@ -44,3 +44,13 @@ export default function App() {
 ## Caching non-`GET` requests
 
 Simply put, you can't. The `Cache API` is built to handle only `GET` requests and not built to handle the intricacies of other request methods. If you want to cache other request methods, I would recommend taking a look at the `IndexedDB API`. A powerful API that allows you to store data in the browser in a database-like manner.
+
+## Remix PWA & Remix SPA
+
+Remix PWA is configured out of the box for Remix Vite (default SSR). For Remix SPA apps, I would recommend using [Vite PWA](https://vite-pwa-org.netlify.app/frameworks/remix.html) for a few reasons.
+
+Firstly, Remix PWA would still work (might need some tweaking) with SPA mode, as the underlying tech is all JavaScript and Service Workers. Nothing fancy. But due to the nature of SPA (absence of route modules & server rendering), Remix PWA doesn't offer much perks. The `sw`, `sync`, etc. packages can still be used. But the underlying vite plugin located in `dev` would be swapped out.
+
+The second reason is that Vite PWA is more rugged (been around for a while) and is more suited to handling SPA projects from the very start. As opposed to Remix PWA that utilises Remix Vite's plugin SSR system to handle the PWA setup.
+
+Lastly, Vite PWA is a fantastic library to use. With an awesome maintainer and a great community, it's a no-brainer to use it where Remix PWA isn't strong-footed :).
